2005-06-30	Jakub Skopal <j@kubs.cz>

 * refactoring into more reusable design

2004-10-04	Jakub Skopal <j@kubs.cz>

 * --disable-multithreaded-resolver option added to configure
   script. this option is necessary for FreeBSD (and maybe
   other BSD unices)
 * fixed more porting issues. solaris, freebsd, openbsd and
   netbsd should also work now.

2004-10-02	Jakub Skopal <j@kubs.cz>

 * fixed porting issues

2004-09-29	Jakub Skopal <j@kubs.cz>

 * modification of IPv6 support
 * bugfix of spec file to include manual page
   (thanks go to Martynas Bieliauskas)
 * implementation of raw encapsulation (for linux IPv6 tunnel
   devices)

2004-09-29	Marcin Kaminski <maxiu@man.poznan.pl>

 * added support for packets counting (instead of just bytes)

2004-08-27	Marcin Kaminski	<maxiu@man.poznan.pl>

 * added IPv6 support (changes: structures, hash algorithms,
   resolving, filters)
 * display changed (IPv6 addresses are bigger, so now address
   field width is dynamic)

2003-07-30	Jakub Skopal	<j@kubs.cz>

 * promisc mode parameter added (-p)
   (thanks to Edmund Roche-Kelly for patch and Andrew Pimlott
    for suggestion)
 * added "local_aggregation", "remote_aggregation" and "select_rule"
   keywords in configuration file
   (thanks to Arturas Slajus for suggestion)
 * added --local-aggr, --remote-aggr and -s parameters

2003-04-24	Jakub Skopal	<j@kubs.cz>

 * released version ignored -i argument. corrected.
   thanks to Miroslav Zajic for pointing out.

2003-04-23	Jakub Skopal	<j@kubs.cz>

 * included man page by Ari Pollak, thanks for help!

2003-04-16	Jakub Skopal	<j@kubs.cz>

 * implemented "interface" keyword in configuration file
   (thanks go to Ari Pollak for suggestion)
 * added resolver patch by Andrew Leiserson (many thanks!)

2002-10-17	Jakub Skopal	<j@kubs.cz>

 * implemented -x command line parameter. You are now able to
   specify custom filter right on the command line. Thanks again
   go to Martynas Bieliauskas
 * implemented aggregation