@@ -1,3 +1,5 @@
+#!/bin/sh
+
 #
 #    jnettop, network online traffic visualiser
 #    Copyright (C) 2002-2005 Jakub Skopal
@@ -16,16 +18,16 @@
 #    along with this program; if not, write to the Free Software
 #    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-#    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/.jnettop,v 1.5 2005-07-01 10:02:07 merunka Exp $
+#    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jnettop-lookup-nmb,v 1.1 2005-07-01 10:02:08 merunka Exp $
 #
 
-# interface	"eth1"
-variable	"intranet"	"net 192.168.0.0/16 or 10.0.0.0/8 or 172.16.0.0/12"
-rule		"Intranet<->Extranet"	"((src ${intranet}) and not (dst ${intranet})) or ((dst ${intranet}) and not (src ${intranet}))"
-rule		"Google"	"host www.google.com"
-rule		"IPv6"		"ip6"
-local_aggregation	none
-remote_aggregation	none
-# select_rule	"Google"
-# resolve "192.168.0.0" "255.255.0.0" normal
-# resolve "192.168.0.0" "255.255.0.0" external "/usr/share/jnettop/jnettop-lookup-nmb"
+nmblookup -A $1 | sed -n '
+1 d
+2 {
+    /^\t/ {
+		s/^\t\([^ ]*\) .*/\1/
+		p
+	}
+   }
+'
+
