@@ -16,16 +16,21 @@
  *    along with this program; if not, write to the Free Software
  *    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jresolver.c,v 1.2 2005-06-30 19:55:19 merunka Exp $
+ *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jresolver.c,v 1.3 2005-07-01 10:02:08 merunka Exp $
  *
  */
 
 #include "jbase.h"
+#include "jutil.h"
 #include "jresolver.h"
 
 GHashTable	*resolverCache;
 GMutex		*resolverCacheMutex;
 GThreadPool	*resolverThreadPool;
+
+GMutex		*gethostbyaddrMutex;
+
+GPtrArray	*resolverTypes;
 
 jbase_resolv_entry *jresolver_Lookup(int af, const jbase_mutableaddress *address) {
 	jbase_resolv_entry key;
@@ -49,12 +54,12 @@ jbase_resolv_entry *jresolver_Lookup(int af, const jbase_mutableaddress *address
 	return rentry;
 }
 
-static void resolverThreadFunc(gpointer task, gpointer user_data) {
-	jbase_resolv_entry *entry = (jbase_resolv_entry *)task;
+static gboolean resolveNormal(jbase_resolv_entry *entry) {
 	gchar buffer[4096];
 	struct hostent shentry, *hentry;
 	int  e, ret, size;
 	gchar *name;
+	gboolean found = FALSE;
 
 #if !HAVE_GETHOSTBYADDR_R_8 && !HAVE_GETHOSTBYADDR_7
 	g_mutex_lock(gethostbyaddrMutex);
@@ -73,12 +78,64 @@ static void resolverThreadFunc(gpointer task, gpointer user_data) {
 	}
 	name = g_strdup(hentry->h_name);
 	entry->name = name;
+	found = TRUE;
 resolverfailed:
 #if !HAVE_GETHOSTBYADDR_R_8 && !HAVE_GETHOSTBYADDR_7
 	g_mutex_unlock(gethostbyaddrMutex);
 #else
 	name = name; // dummy to avoid deprecated warning on linux
 #endif
+	return found;
+}
+
+static gboolean resolveExternal(char *lookupScriptPath, jbase_resolv_entry *entry) {
+	gchar *outname;
+	gint outstatus;
+	gchar **argv = (gchar **) g_new0(gchar *, 2);
+	gchar *buffer = (gchar *) g_new0(gchar, 256);
+	jutil_Address2String(entry->af, &entry->addr, buffer, 256);
+	argv[0] = lookupScriptPath;
+	argv[1] = buffer;
+	if (g_spawn_sync(NULL, argv, NULL, G_SPAWN_STDERR_TO_DEV_NULL, NULL, NULL, &outname, NULL, &outstatus, NULL)) {
+		if (!WEXITSTATUS(outstatus)) {
+			g_strdelimit(outname, "\r\n\t", '\0');
+			if (strlen(outname) > 0) {
+				entry->name = outname;
+				return TRUE;
+			}
+			// strip name
+		}
+	}
+	g_free(buffer);
+	return FALSE;
+}
+
+static void resolverThreadFunc(gpointer task, gpointer user_data) {
+	int i;
+	jbase_resolv_entry *entry = (jbase_resolv_entry *)task;
+
+	for (i=0; i<resolverTypes->len; i++) {
+		jresolver_resolvertype *type = (jresolver_resolvertype *)g_ptr_array_index(resolverTypes, i);
+		jbase_mutableaddress	addr;
+		if (type->af != entry->af)
+			continue;
+		memcpy(&addr, &entry->addr, JBASE_AF_SIZE(entry->af));
+		memand((char *) &addr, (const char *) &type->mask, JBASE_AF_SIZE(entry->af));
+		if (!memcmp(&addr, &type->value, JBASE_AF_SIZE(entry->af))) {
+			switch (type->lookupType) {
+				case LOOKUPTYPE_EXTERNAL:
+					if (resolveExternal(type->externalLookupScript, entry))
+						return;
+					break;
+				case LOOKUPTYPE_NORMAL:
+					if (resolveNormal(entry))
+						return;
+					break;
+			}
+		}
+	}
+
+	resolveNormal(entry);
 }
 
 static void addZeroResolves() {
@@ -131,10 +188,31 @@ static gboolean compareResolvEntry(gconstpointer a, gconstpointer b) {
 	return !memcmp(&aa->addr, &bb->addr, sizeof(aa->addr));
 }
 
-gboolean		jresolver_Setup() {
+void jresolver_AddExternalLookupScript(int af, const jbase_mutableaddress *mask, const jbase_mutableaddress *value, char *lookupScriptName) {
+	jresolver_resolvertype *type = g_new0(jresolver_resolvertype, 1);
+	type->af = af;
+	memcpy(&type->mask, mask, sizeof(jbase_mutableaddress));
+	memcpy(&type->value, value, sizeof(jbase_mutableaddress));
+	type->lookupType = LOOKUPTYPE_EXTERNAL;
+	type->externalLookupScript = lookupScriptName;
+	g_ptr_array_add(resolverTypes, type);
+}
+
+void jresolver_AddNormalLookup(int af, const jbase_mutableaddress *mask, const jbase_mutableaddress *value) {
+	jresolver_resolvertype *type = g_new0(jresolver_resolvertype, 1);
+	type->af = af;
+	memcpy(&type->mask, mask, sizeof(jbase_mutableaddress));
+	memcpy(&type->value, value, sizeof(jbase_mutableaddress));
+	type->lookupType = LOOKUPTYPE_NORMAL;
+	g_ptr_array_add(resolverTypes, type);
+}
+
+gboolean jresolver_Setup() {
 	resolverCache = g_hash_table_new((GHashFunc)hashResolvEntry, (GEqualFunc)compareResolvEntry);
 	resolverCacheMutex = g_mutex_new();
 	resolverThreadPool = g_thread_pool_new((GFunc)resolverThreadFunc, NULL, 5, FALSE, NULL);
+	resolverTypes = g_ptr_array_new();
+	gethostbyaddrMutex = g_mutex_new();
 
 	addZeroResolves();
 	return TRUE;
