@@ -16,7 +16,7 @@
  *    along with this program; if not, write to the Free Software
  *    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jresolver.h,v 1.2 2005-06-30 19:55:19 merunka Exp $
+ *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jresolver.h,v 1.3 2005-07-01 10:02:08 merunka Exp $
  *
  */
 
@@ -25,7 +25,21 @@
 
 #include "jbase.h"
 
+#define LOOKUPTYPE_UNKNOWN	0
+#define LOOKUPTYPE_NORMAL	1
+#define LOOKUPTYPE_EXTERNAL	2
+
+typedef struct __jresolver_resolvertype {
+	int			af;
+	jbase_mutableaddress	mask;
+	jbase_mutableaddress	value;
+	int			lookupType;
+	char			*externalLookupScript;
+} jresolver_resolvertype;
+
 gboolean		jresolver_Setup();
 jbase_resolv_entry 	*jresolver_Lookup(int af, const jbase_mutableaddress *address);
+void			jresolver_AddExternalLookupScript(int af, const jbase_mutableaddress *mask, const jbase_mutableaddress *value, char *lookupScriptName);
+void			jresolver_AddNormalLookup(int af, const jbase_mutableaddress *mask, const jbase_mutableaddress *value);
 
 #endif
