@@ -16,7 +16,7 @@
  *    along with this program; if not, write to the Free Software
  *    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jutil.c,v 1.3 2005-06-30 21:34:48 merunka Exp $
+ *    $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/jutil.c,v 1.4 2005-07-01 10:02:08 merunka Exp $
  *
  */
 
@@ -89,3 +89,9 @@ guint     jutil_ParseAggregation(const char *agg) {
 	return AGG_UNKNOWN;
 }
 
+void memand(char *buf1, const char *buf2, int length) {
+	int i;
+	for (i=0; i<length; i++) {
+		buf1[i] &= buf2[i];
+	}
+}
