@@ -1,3 +1,7 @@
+2005-06-31:	Added pause
+		Added sorting
+		Added external resolvers
+
 2005-06-30:	Refactoring to more reusable design
 
 2004-10-04:	Added --disable-multithreaded-resolver option for FreeBSD
@@ -36,4 +40,4 @@
 
 2002-08-22:	The package is entirely new.
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.13 2005-06-30 21:37:51 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.14 2005-07-01 10:02:08 merunka Exp $
